--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="content">
         <header class="header">
+            <div class="barra_menu">
             <a href="" class="name_header"><img src="img/auto_awesome_black_24dp 1.png" alt=""> Fulana de Tal</a>
             <nav>
                 <ul>
@@ -26,6 +27,7 @@
                     <li><strong><a href="" class="contacto">contacto@fulana.com</a></strong></li>
                 </ul>
             </nav>
+        </div>
         </header>
         <section class="presentacion">
             <div class="content_presentacion">
