--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
     <div class="content">
         <header class="header">
             <div class="barra_menu">
-            <a href="" class="name_header"><img src="img/auto_awesome_black_24dp 1.png" alt=""> Fulana de Tal</a>
-            <nav>
-                <ul>
-                    <li><a href="" class="sobre_mi">Sobre Mi</a></li>
-                    <li><a href=""></a>Skills</li>
-                    <li><a href=""></a>Hobbies</li>
-                    <li><a href=""></a>Formación</li>
-                    <li><a href=""></a>Proyectos</li>
-                    <li><strong><a href="" class="contacto">contacto@fulana.com</a></strong></li>
-                </ul>
-            </nav>
-        </div>
+                <a href="" class="name_header"><img src="img/auto_awesome_black_24dp 1.png" alt=""> Fulana de Tal</a>
+                <nav class="menu_navegacion">
+                    <ul>
+                        <li><a href="" class="sobre_mi">Sobre Mi</a></li>
+                        <li><a href=""></a>Skills</li>
+                        <li><a href=""></a>Hobbies</li>
+                        <li><a href=""></a>Formación</li>
+                        <li><a href=""></a>Proyectos</li>
+                        <li><a href="" class="contacto__menu__navegacion">contacto@fulana.com</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <section class="presentacion">
             <div class="content_presentacion">
                 <h1 class="presentacion__titulo_principal">Hola, mi nombre es Fulana de Tal y construyo paginas web</h1>
-                <p class="presentacion__subtitulo_principal">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto
+                <p class="presentacion__subtitulo_principal">Soy formada en .... lorem ipsum sit amet consectetur y
+                    actualmente estoy participando del proyecto
                     Oracle
                     ONE en Alura Latam.</p>
                 <ul>
