--- a/index.html
+++ b/index.html
@@ -31,22 +31,28 @@
         </header>
         <section class="presentacion">
             <div class="content_presentacion">
-                <h1 class="presentacion__titulo_principal">Hola, mi nombre es Fulana de Tal y construyo paginas web</h1>
-                <p class="presentacion__subtitulo_principal">Soy formada en .... lorem ipsum sit amet consectetur y
-                    actualmente estoy participando del proyecto
-                    Oracle
-                    ONE en Alura Latam.</p>
-                <ul>
-                    <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Github</a></li>
-                    <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Linkedin</a></li>
-                    <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Instagram</a></li>
-                    <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Currículo</a></li>
+                <div class="menu__presentacion">
+                    <h1 class="presentacion__titulo_principal">Hola, mi nombre es Fulana de Tal y construyo paginas web
+                    </h1>
+                    <p class="presentacion__subtitulo_principal">Soy formada en .... lorem ipsum sit amet consectetur y
+                        actualmente estoy participando del proyecto
+                        Oracle
+                        ONE en Alura Latam.</p>
+                    <ul>
+                        <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Github</a></li>
+                        <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Linkedin</a></li>
+                        <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Instagram</a>
+                        </li>
+                        <li><a href="" class="presentacion__enlaces"> <img src="img/Vector.png" alt="">Currículo</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="imagen_presentacion">
+                    <img src="img/unsplash_anAAZ0nrqBY.png" alt="">
+                </div>
 
-                </ul>
             </div>
-            <div class="imagen_presentacion">
-                <img src="img/unsplash_anAAZ0nrqBY.png" alt="">
-            </div>
+
         </section>
         <section class="sobre__mi">
             <h3>Sobre mi</h3>
