--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
         </section>
         <section class="sobre__mi">
+            <div class="content__sobre__mi">
             <h3>Sobre mi</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
                 dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
@@ -65,6 +66,7 @@
                 semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.
             </p>
             <img src="img/image 4.png" alt="">
+        </div>
         </section>
         <section class="Skills">
             <h3>Skills</h3>
