--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <a href="" class="name_header"><img src="img/auto_awesome_black_24dp 1.png" alt=""> Fulana de Tal</a>
                 <nav class="menu_navegacion">
                     <ul>
-                        <li><a href="" class="sobre_mi">Sobre Mi</a></li>
-                        <li><a href=""></a>Skills</li>
-                        <li><a href=""></a>Hobbies</li>
-                        <li><a href=""></a>Formación</li>
-                        <li><a href=""></a>Proyectos</li>
-                        <li><a href="" class="contacto__menu__navegacion">contacto@fulana.com</a></li>
+                        <li><a href="#" class="sobre_mi">Sobre Mi</a></li>
+                        <li><a href="#"></a>Skills</li>
+                        <li><a href="#"></a>Hobbies</li>
+                        <li><a href="#"></a>Formación</li>
+                        <li><a href="#"></a>Proyectos</li>
+                        <li><a href="#" class="contacto__menu__navegacion">contacto@fulana.com</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,17 +56,18 @@
         </section>
         <section class="sobre__mi">
             <div class="content__sobre__mi">
-            <h3>Sobre mi</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
-                dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
-                semper sagittis ligula et lacinia.
+                <h3>Sobre mi</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
+                    dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
+                    semper sagittis ligula et lacinia.
 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
-                dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
-                semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.
-            </p>
-            <img src="img/image 4.png" alt="">
-        </div>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
+                    dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
+                    semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet
+                    metus.
+                </p>
+                <img src="img/image 4.png" alt="">
+            </div>
         </section>
         <section class="Skills">
             <h3>Skills</h3>
