--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </nav>
             </div>
         </header>
-        <section class="presentacion">
+       <!--  <section class="presentacion">
             <div class="content_presentacion">
                 <div class="menu__presentacion">
                     <h1 class="presentacion__titulo_principal">Hola, mi nombre es Fulana de Tal y construyo paginas web
@@ -102,7 +102,7 @@
             <p>Desarrollado por Fulana de Tal
                 2022</p>
         </footer>
-    </div>
+    </div>--> 
 </body>
 
 </html>
